# isoster

./: README.md  mkdocs.yml  pyproject.toml
benchmarks/: benchmark_real_galaxy_m51.py  benchmark_real_galaxy_m51_fixed.py  benchmark_synthetic_gaussian_clean.py  benchmark_synthetic_gaussian_noisy.py  benchmark_synthetic_sersic_n4_noisy.py  micro_benchmark.py
docs/: algorithm.md  description.md  guide.md  todo.md
examples/: m51_isophotes.fits  m51_isoster_results.fits  m51_model.fits  run_high_ellipticity_test.py  run_m51_baseline.py  run_m51_benchmark.py  run_m51_cog_test.py  run_m51_ea_comparison.py  run_m51_forced_benchmark.py  run_m51_forced_complete.py  run_m51_forced_mode2.py  run_m51_model.py  run_m51_photometry.py  run_m51_pydantic.py  run_sersic_cog_test.py
isoster/: __init__.py  cli.py  cog.py  config.py  driver.py  fitting.py  model.py  optimize.py  plotting.py  sampling.py  utils.py
isoster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_fitting.py  test_model.py  test_sampling.py
