[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isoster"
version = "0.1.0"
description = "ISOphote on STERoid - Accelerated isophote fitting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "pyyaml"
]

[project.scripts]
isoster = "isoster.cli:main"
